Changes for 1.8.1

 - [ZBX-1174] fixed sql in "Add host" operation in "Discovery" module (Dmitry)
 - [ZBX-1431] fixed parameters for user.get api method (Vedmak)
 - [ZBX-1467] fixed graph copying (Vedmak)
 - [ZBX-1502] fixed full clone of hosts (Vedmak)
 - [ZBX-1460] forbidded creation of circular template linkages (Vedmak)
 - [ZBX-1441] fixed wrong rememberes link line type (Vedmak)
 - [ZBX-1498] fixed error when try to create item with custom key "log" and not Log item type (Vedmak)
 - [ZBX-1497] fixed evaluation of trigger function 'count' (Sasha)
 - [ZBX-1283] fixed group selection in maintenance edit form (Vedmak)
 - [ZBX-1316] fixed missing trigger expressions using expression constructor (Vedmak)
 - [ZBX-1473] fixed installation requires mb_string function from php 5.2 (Vedmak)
 - [ZBX-1454] fixed adding user to one group, removes all other users from group (Vedmak)
 - [ZBX-1346] improve example configuration files (Richlv)
 - [ZBX-1369] make more strings translatable (Richlv)

Changes for 1.8

 - [DEV-316] added logging of executed commands on agent side. Parameter LogRemoteCommands (Sasha)
 - [DEV-316] implemented displaying of history of remote commands (Sasha)
 - [ZBX-1444] added map link macro {host:key.func(param)} (Sasha)
 - [ZBX-1299] fixed "configure" script key "--with-ssh2[=ARG]", custom library path can be provided (Dmitry)
 - [ZBX-1409] fixed administrators cannot edit hosts (Vedmak)
 - [ZBX-1450] add disabling IPMI items if support of IPMI parameters was not compiled in (Sasha)
 - [DEV-357] added UTF8 support (Sasha)
 - [ZBX-1449] fixed possibility of editing templated graphs (Vedmak)
 - [ZBX-1174] fixed "Add host" operation in "Discovery" module, ports are now never updated when the host already exists (Dmitry)
 - [ZBX-1357] updated French translation. Thanks to alixen (Richlv)
 - [ZBX-1306] fixed showing triggers that recently changed state as errors in dashboard (Vedmak)