@@ -692,7 +692,7 @@
 
 //	hosts.php
 	'S_MACROS'=>					'Macros',
-	'S_ERROR_ADDING_MACRO'=>		'Error while adding Host Macro',
+	'S_ERROR_ADDING_MACRO'=>			'Error while adding Host Macro',
 	'S_WRONG_MACRO'=>				'Wrong macro',
 	'S_MACRO_TOO_LONG'=>				'Macro name is too long, should not exceed 64 chars.',
 	'S_MACRO_VALUE_TOO_LONG'=>			'Macro value is too long, should not exceed 255 chars.',
@@ -701,7 +701,9 @@
 	'S_EMPTY_MACRO_VALUE'=>				'Empty macro value',
 	'S_NO_MACROS_DEFINED'=>				'No macros defined',
 	'S_MACRO_ADDED'=>				'Macro added',
+	'S_MACROS_DELETED' =>				'Macros deleted',
 	'S_CANNOT_ADD_MACRO'=>				'Cannot add macro',
+	'S_CANNOT_DELETE_MACROS'=>			'Cannot delete macros',
 	'S_HOST_LIST'=>					'Hosts list',
 	'S_IN'=>					'In',
 	'S_APPLICATION'=>				'Application',
